[package]
name = "wasmedge-paratime"
version = "0.1.0"
authors = ["SecondState"]
edition = "2018"

[dependencies]
bytes = { version = "1.0.1", features = ["serde"] }
hex = "0.4.3"
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "5af8e65c2e1d38aa04580ea089b67094648396a7" }
once_cell = "1.7.2"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
ethereum-types = "0.11.0"

[profile.release]
lto = true
panic = "abort"
